Add lesson23 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2490,7 +2490,120 @@
   </p>
 </template>
 
-<template id="lesson22-page19">
+
+<template id="lesson22-page29">
+  <h2>GG WP :)</h2>
+  <p>КОНЕКЦ</p>
+</template>
+
+<template id="lesson22-page30">
+  <h2>Set Theory</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Комбінаторика. Початки теорії множини.</a>
+  </p>
+</template>
+
+<template id="lesson22-page31">
+  <h2>Venn Diagrams</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=b6t0994ZZDA">Venn Diagrams: Shading Regions for Two Sets</a>
+  </p>
+</template>
+
+<template id="lesson23-page0">
+  <h2>[2 min] English</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=ZEg6Ht2pNH0">Bush</a>
+  </p>
+</template>
+
+<template id="lesson23-page1">
+  <h2>[3 min] КОЖНИЙ ПО РЕЧЕННЮ БІСТРО</h2>
+  <p>
+    What do y'all dogs think 'bout da Bush speech?
+  </p>
+</template>
+
+<template id="lesson23-page2">
+  <h2>
+    ЛИТУЧКА
+  </h2>
+  <figure>
+    <img src="img/lety4ka.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson23-page3">
+  <h2>
+    [5 min] С помощью Javascript вывести текст "Hell World" на экран.
+  </h2>
+  <figure>
+    <img src="img/hell-world.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson23-page4">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать функцию say(something), которая принимает текст, и выводит его на экран.
+
+    <pre>
+    <code>
+      say('xuy4ek'); // выводит xuy4ek на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson23-page5">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать функцию say(something), которая принимает текст, и выводит его на экран.
+
+    <pre>
+    <code>
+      say('xuy4ek'); // выводит xuy4ek на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson23-page6">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
+</template>
+
+<template id="lesson23-page7">
+  <h2>[5 min] English</h2>
+  <p>
+    <a href="https://www.youtube.com/watch?v=FAsfetsJ3SY">$1.7M toilet</a>
+  </p>
+</template>
+
+<template id="lesson23-page8">
+  <h2>[5 min] КОЖНИЙ ПО РЕЧЕННЮ БІСТРО</h2>
+  <p>
+    'Sup dog
+  </p>
+</template>
+
+<template id="lesson23-page9">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать функцию subtract(a, b), которая принимает 2 числа, и возвращает их разницу.
+
+    <pre>
+    <code>
+      const result = subtract(5, 7);
+      say(result); // печатает -2
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson23-page10">
   <h2>Новый Мотериал: ОБЪЕКТО</h2>
   <p>
     Что такое ОБЪЕКТО?
@@ -2500,8 +2613,8 @@
   </p>
 </template>
 
-<template id="lesson22-page20">
-  <h2>ПЕРЕМЕР: ТОЧКЕ</h2>
+<template id="lesson23-page11">
+  <h2>[10 min] ПЕРЕМЕР: ТОЧКЕ</h2>
   <p>
     <pre>
     <code>
@@ -2510,9 +2623,9 @@
         y: 2,
       };
 
-      print('point: ' + point);
-      print('point.x: ' + point.x);
-      print('point.y: ' + point.y);
+      say('point: ' + point);
+      say('point.x: ' + point.x);
+      say('point.y: ' + point.y);
 
       console.log('point: ');
       console.log(point);
@@ -2527,8 +2640,22 @@
   </p>
 </template>
 
-<template id="lesson22-page21">
-  <h2>ЗОДАНЕЕ</h2>
+<template id="lesson23-page12">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
+</template>
+
+<template id="lesson23-page13">
+  <h2>[15 min] English</h2>
+  <p>
+    <a href="https://www.coursera.org/learn/game-design-and-development-1/lecture/TFuer/unity-setup">Unity Setup</a>
+  </p>
+</template>
+
+<template id="lesson22-page14">
+  <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая принимает точку как обьект { x , y }, и возращает расстояние точки до начала координат (0, 0) числом.
 
@@ -2551,14 +2678,21 @@
   </p>
 </template>
 
-<template id="lesson22-page22">
+<template id="lesson23-page15">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
+</template>
+
+<template id="lesson23-page16">
   <h2>РЕКТ</h2>
   <figure>
     <img src="img/rectangle.jpeg" />
   </figure>
 </template>
 
-<template id="lesson22-page23">
+<template id="lesson23-page17">
   <h2>РЕКТ</h2>
   <p>
     <pre>
@@ -2573,8 +2707,8 @@
   </p>
 </template>
 
-<template id="lesson22-page24">
-  <h2>ЗОДАНЕЕ</h2>
+<template id="lesson23-page18">
+  <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая печатает на экран координаты и размер прямоульника { x, y, width, height }
     <pre>
@@ -2586,8 +2720,8 @@
   </p>
 </template>
 
-<template id="lesson22-page25">
-  <h2>ЗОДАНЕЕ</h2>
+<template id="lesson23-page19">
+  <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею isInsideRect(point, rect), которая возвращает true, если точка внутри прямоугольника, и false, если вне.
 
@@ -2614,6 +2748,13 @@
       isInsideRect(poin2, rect); // false
     </code>
     </pre>
+  </p>
+</template>
+
+<template id="lesson23-page20">
+  <h2>FIN</h2>
+  <p>
+    КОНЕКЦ
   </p>
 </template>
 
@@ -2671,53 +2812,6 @@
       <li>Добавляем еще 2 стены, т.е. будет 3 у нас теперь )</li>
       <li>С помощью rectsIntersect(wallRect, shipRect) легко добавляем столкновение для новых стен</li>
     </ol>
-  </p>
-</template>
-
-<template id="lesson22-page29">
-  <h2>GG WP :)</h2>
-  <p>КОНЕКЦ</p>
-</template>
-
-<template id="lesson22-page30">
-  <h2>Set Theory</h2>
-  <p>
-    <a href="https://www.youtube.com/watch?v=6s2UJBFDCoA">Комбінаторика. Початки теорії множини.</a>
-  </p>
-</template>
-
-<template id="lesson22-page31">
-  <h2>Venn Diagrams</h2>
-  <p>
-    <a href="https://www.youtube.com/watch?v=b6t0994ZZDA">Venn Diagrams: Shading Regions for Two Sets</a>
-  </p>
-</template>
-
-<template id="lesson23-pageX">
-  <h2>English</h2>
-  <p>
-    <a href="https://www.youtube.com/watch?v=ZEg6Ht2pNH0">Bush</a>
-  </p>
-</template>
-
-<template id="lesson23-pageX">
-  <h2>КОЖНИЙ ПО РЕЧЕННЮ БІСТРО</h2>
-  <p>
-    What do y'all dogs think 'bout da Bush speech?
-  </p>
-</template>
-
-<template id="lesson23-pageX">
-  <h2>C</h2>
-  <p>
-    <a href="https://www.youtube.com/watch?v=Y9Zw6xOGly0">C</a>
-  </p>
-</template>
-
-<template id="lesson23-pageX">
-  <h2>C</h2>
-  <p>
-    <a href="https://www.youtube.com/watch?v=Y9Zw6xOGly0">C</a>
   </p>
 </template>
 
