--- a/src/slides.html
+++ b/src/slides.html
@@ -2443,7 +2443,7 @@
 
     <pre>
     <code>
-      print(add2(5)); // выводит 10 на экран
+      print(multiplyBy2(5)); // выводит 10 на экран
     </code>
     </pre>
   </p>
@@ -2491,7 +2491,7 @@
 </template>
 
 
-<template id="lesson22-page29">
+<template id="lesson22-page19">
   <h2>GG WP :)</h2>
   <p>КОНЕКЦ</p>
 </template>
@@ -2556,40 +2556,27 @@
 </template>
 
 <template id="lesson23-page5">
-  <h2>[5 min] ЗОДАНЕЕ</h2>
-  <p class="task">
-    Написать функцию say(something), которая принимает текст, и выводит его на экран.
-
-    <pre>
-    <code>
-      say('xuy4ek'); // выводит xuy4ek на экран
-    </code>
-    </pre>
-  </p>
-</template>
-
-<template id="lesson23-page6">
   <h2>ПЕРЕМЕНА</h2>
     <figure>
       <img src="img/peremena.jpeg" />
     </figure>
 </template>
 
-<template id="lesson23-page7">
+<template id="lesson23-page6">
   <h2>[5 min] English</h2>
   <p>
     <a href="https://www.youtube.com/watch?v=FAsfetsJ3SY">$1.7M toilet</a>
   </p>
 </template>
 
-<template id="lesson23-page8">
+<template id="lesson23-page7">
   <h2>[5 min] КОЖНИЙ ПО РЕЧЕННЮ БІСТРО</h2>
   <p>
     'Sup dog
   </p>
 </template>
 
-<template id="lesson23-page9">
+<template id="lesson23-page8">
   <h2>[5 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать функцию subtract(a, b), которая принимает 2 числа, и возвращает их разницу.
@@ -2603,7 +2590,7 @@
   </p>
 </template>
 
-<template id="lesson23-page10">
+<template id="lesson23-page9">
   <h2>Новый Мотериал: ОБЪЕКТО</h2>
   <p>
     Что такое ОБЪЕКТО?
@@ -2613,7 +2600,7 @@
   </p>
 </template>
 
-<template id="lesson23-page11">
+<template id="lesson23-page10">
   <h2>[10 min] ПЕРЕМЕР: ТОЧКЕ</h2>
   <p>
     <pre>
@@ -2640,21 +2627,21 @@
   </p>
 </template>
 
-<template id="lesson23-page12">
+<template id="lesson23-page11">
   <h2>ПЕРЕМЕНА</h2>
     <figure>
       <img src="img/peremena.jpeg" />
     </figure>
 </template>
 
-<template id="lesson23-page13">
+<template id="lesson23-page12">
   <h2>[15 min] English</h2>
   <p>
     <a href="https://www.coursera.org/learn/game-design-and-development-1/lecture/TFuer/unity-setup">Unity Setup</a>
   </p>
 </template>
 
-<template id="lesson22-page14">
+<template id="lesson22-page13">
   <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая принимает точку как обьект { x , y }, и возращает расстояние точки до начала координат (0, 0) числом.
@@ -2671,28 +2658,28 @@
         y: 1,
       };
 
-      print(point1); // выводит 5 на экран
-      print(point2); // выводит 1.4142135623730951 на экран
+      say(distance(point1)); // выводит 5 на экран
+      say(distance(point2)); // выводит 1.4142135623730951 на экран
     </code>
     </pre>
   </p>
 </template>
 
-<template id="lesson23-page15">
+<template id="lesson23-page14">
   <h2>ПЕРЕМЕНА</h2>
     <figure>
       <img src="img/peremena.jpeg" />
     </figure>
 </template>
 
-<template id="lesson23-page16">
+<template id="lesson23-page15">
   <h2>РЕКТ</h2>
   <figure>
     <img src="img/rectangle.jpeg" />
   </figure>
 </template>
 
-<template id="lesson23-page17">
+<template id="lesson23-page16">
   <h2>РЕКТ</h2>
   <p>
     <pre>
@@ -2707,7 +2694,7 @@
   </p>
 </template>
 
-<template id="lesson23-page18">
+<template id="lesson23-page17">
   <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая печатает на экран координаты и размер прямоульника { x, y, width, height }
@@ -2720,8 +2707,8 @@
   </p>
 </template>
 
-<template id="lesson23-page19">
-  <h2>[10 min] ЗОДАНЕЕ</h2>
+<template id="lesson23-page18">
+  <h2>[15 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею isInsideRect(point, rect), которая возвращает true, если точка внутри прямоугольника, и false, если вне.
 
@@ -2751,7 +2738,7 @@
   </p>
 </template>
 
-<template id="lesson23-page20">
+<template id="lesson23-page19">
   <h2>FIN</h2>
   <p>
     КОНЕКЦ
