Update lesson23 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2529,7 +2529,7 @@
     ЛИТУЧКА
   </h2>
   <figure>
-    <img src="img/lety4ka.jpeg" />
+    <img src="img/lety4ka.gif" />
   </figure>
 </template>
 
@@ -2641,7 +2641,7 @@
   </p>
 </template>
 
-<template id="lesson22-page13">
+<template id="lesson23-page13">
   <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая принимает точку как обьект { x , y }, и возращает расстояние точки до начала координат (0, 0) числом.
@@ -2673,13 +2673,20 @@
 </template>
 
 <template id="lesson23-page15">
+  <h2>[5 min] English</h2>
+  <p>
+    <a href="https://tabs.ultimate-guitar.com/tab/system-of-a-down/soldier-side-chords-791757">Soldier Side</a>
+  </p>
+</template>
+
+<template id="lesson23-page16">
   <h2>РЕКТ</h2>
   <figure>
     <img src="img/rectangle.jpeg" />
   </figure>
 </template>
 
-<template id="lesson23-page16">
+<template id="lesson23-page17">
   <h2>РЕКТ</h2>
   <p>
     <pre>
@@ -2694,7 +2701,7 @@
   </p>
 </template>
 
-<template id="lesson23-page17">
+<template id="lesson23-page18">
   <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая печатает на экран координаты и размер прямоульника { x, y, width, height }
@@ -2707,7 +2714,54 @@
   </p>
 </template>
 
-<template id="lesson23-page18">
+<template id="lesson23-page19">
+  <h2>[5 min] Димон: шо там Мишиган?)</h2>
+</template>
+
+<template id="lesson23-page20">
+  <h2>[5 min] Johnny: поправил код в PR?)</h2>
+</template>
+
+<template id="lesson23-page21">
+  <h2>[5 min] Git merge &amp; squash</h2>
+  <figure>
+    <img src="img/git-hist-master.png" />
+    <figcaption>"master" branch commits</figcaption>
+  </figure>
+</template>
+
+<template id="lesson23-page22">
+  <h2>Git merge &amp; squash</h2>
+  <figure>
+    <img src="img/git-hist-start-button.png" />
+    <figcaption>"start-button" branch commits</figcaption>
+  </figure>
+</template>
+
+<template id="lesson23-page23">
+  <h2>Git merge &amp; squash</h2>
+  <figure>
+    <img src="img/git-squash.png" />
+    <figcaption>What is Squash</figcaption>
+  </figure>
+</template>
+
+<template id="lesson23-page24">
+  <h2>Github: merge &amp; squash</h2>
+  <figure>
+    <img src="img/github-squash.png" />
+    <figcaption>Github merge &amp; squash button</figcaption>
+  </figure>
+</template>
+
+<template id="lesson23-page25">
+  <h2>FIN</h2>
+  <p>
+    КОНЕКЦ
+  </p>
+</template>
+
+<template id="lesson23-page26">
   <h2>[15 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею isInsideRect(point, rect), которая возвращает true, если точка внутри прямоугольника, и false, если вне.
@@ -2738,12 +2792,6 @@
   </p>
 </template>
 
-<template id="lesson23-page19">
-  <h2>FIN</h2>
-  <p>
-    КОНЕКЦ
-  </p>
-</template>
 
 <template id="lesson22-page26">
   <h2>RECT COLLISION FUNCTION</h2>
