Update lesson24 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -2702,6 +2702,150 @@
 
 <template id="lesson24-page0">
   <h2>[5 min] English</h2>
+  <figure>
+    <video controls>
+      <source src="/video/function-execution.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson24-page1">
+  <h2>[2 min] КОЖНИЙ ПО РЕЧЕННЮ</h2>
+</template>
+
+<template id="lesson24-page2">
+  <h2>[5 min] Димон: шо там Мишиган?)</h2>
+</template>
+
+<template id="lesson24-page2">
+  <h2>
+    ЛИТУЧКА
+  </h2>
+  <figure>
+    <img src="img/lety4ka.gif" />
+  </figure>
+</template>
+
+<template id="lesson24-page3">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать функцию say(something), которая принимает текст, и выводит его на экран.
+
+    <pre>
+    <code>
+      say('xuy4ek'); // выводит xuy4ek на экран
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson24-page4">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать функцию log(something), которая принимает любую переменную, и выводит ее в консоль.
+
+    <pre>
+    <code>
+      const text = 'xuy4ek';
+      const chislo = 5;
+      const point1 = { x: 3, y: 8 };
+      const point2 = { x: 2, y: 3 };
+      log(text); // выводит xuy4ek в консоль 
+      log(chislo); // выводит 5 в консоль 
+      log(point1); // выводит { x: 3, y: 8 } в консоль
+      log(point2); // выводит { x: 2, y: 3 } в консоль
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson24-page5">
+  <h2>ПЕРЕМЕНА</h2>
+    <figure>
+      <img src="img/peremena.jpeg" />
+    </figure>
+</template>
+
+<template id="lesson24-page6">
+  <h2>[5 min] English</h2>
+  <figure>
+    <video controls id="task1-video">
+      <source src="/video/gamedev/create-project.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson24-page7">
+  <h2>[2 min] КОЖНИЙ ПО РЕЧЕННЮ</h2>
+</template>
+
+<template id="lesson24-page8">
+  <h2>[5 min] Johnny: поправил код в PR?)</h2>
+</template>
+
+<template id="lesson24-page9">
+  <h2>[10 min] Git merge &amp; squash</h2>
+  <figure>
+    <img src="img/git-hist-master.png" />
+    <figcaption>"master" branch commits</figcaption>
+  </figure>
+</template>
+
+<template id="lesson24-page10">
+  <h2>Git merge &amp; squash</h2>
+  <figure>
+    <img src="img/git-hist-start-button.png" />
+    <figcaption>"start-button" branch commits</figcaption>
+  </figure>
+</template>
+
+<template id="lesson24-page11">
+  <h2>Git merge &amp; squash</h2>
+  <figure>
+    <img src="img/git-squash.png" />
+    <figcaption>What is Squash</figcaption>
+  </figure>
+</template>
+
+<template id="lesson24-page12">
+  <h2>Github: merge &amp; squash</h2>
+  <figure>
+    <img src="img/github-squash.png" />
+    <figcaption>Github merge &amp; squash button</figcaption>
+  </figure>
+</template>
+
+<template id="lesson24-page13">
+  <h2>ПЕРЕМЕНА</h2>
+  <figure>
+    <img src="img/peremena.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson24-page14">
+  <h2>[5 min] English + по реченню</h2>
+  <figure>
+    <video controls>
+      <source src="/video/tibees/square-roots.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson24-page15">
+  <h2>Игра: добавляем еще стены</h2>
+  <p>Добавляем еще 2 стены аналогично существующей.</p>
+  <p>По 5 мин по кругу кодим )</p>
+</template>
+
+<template id="lesson24-page16">
+  <h2>ПЕРЕМЕНА</h2>
+  <figure>
+    <img src="img/peremena.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson24-page17">
+  <h2>[5 min] English</h2>
   <p>
     <pre>
     SOAD - Soldier Side
@@ -2785,100 +2929,23 @@
   </p>
 </template>
 
-<template id="lesson24-page1">
-  <h2>[2 min] КОЖНИЙ ПО РЕЧЕННЮ</h2>
+<template id="lesson24-page18">
+  <h2>[2 min] По реченню</h2>
 </template>
 
-<template id="lesson24-page2">
-  <h2>[5 min] Димон: шо там Мишиган?)</h2>
+<template id="lesson24-page19">
+  <h2>Соображаем как упростить код с помощью фукцей</h2>
+  <p>И объектов :)</p>
 </template>
 
-<template id="lesson24-page3">
-  <h2>[5 min] Johnny: поправил код в PR?)</h2>
-</template>
-
-<template id="lesson24-page4">
-  <h2>[5 min] Git merge &amp; squash</h2>
-  <figure>
-    <img src="img/git-hist-master.png" />
-    <figcaption>"master" branch commits</figcaption>
-  </figure>
-</template>
-
-<template id="lesson24-page5">
-  <h2>Git merge &amp; squash</h2>
-  <figure>
-    <img src="img/git-hist-start-button.png" />
-    <figcaption>"start-button" branch commits</figcaption>
-  </figure>
-</template>
-
-<template id="lesson24-page6">
-  <h2>Git merge &amp; squash</h2>
-  <figure>
-    <img src="img/git-squash.png" />
-    <figcaption>What is Squash</figcaption>
-  </figure>
-</template>
-
-<template id="lesson24-page7">
-  <h2>Github: merge &amp; squash</h2>
-  <figure>
-    <img src="img/github-squash.png" />
-    <figcaption>Github merge &amp; squash button</figcaption>
-  </figure>
-</template>
-
-<template id="lesson24-page8">
-  <h2>ПЕРЕМЕНА</h2>
-    <figure>
-      <img src="img/peremena.jpeg" />
-    </figure>
-</template>
-
-<template id="lesson24-page9">
-  <h2>
-    ЛИТУЧКА
-  </h2>
-  <figure>
-    <img src="img/lety4ka.gif" />
-  </figure>
-</template>
-
-<template id="lesson24-page10">
-  <h2>[5 min] ЗОДАНЕЕ</h2>
-  <p class="task">
-    Написать функцию say(something), которая принимает текст, и выводит его на экран.
-
-    <pre>
-    <code>
-      say('xuy4ek'); // выводит xuy4ek на экран
-    </code>
-    </pre>
+<template id="lesson24-page20">
+  <h2>FIN</h2>
+  <p>
+    КОНЕКЦ
   </p>
 </template>
 
-<template id="lesson24-page11">
-  <h2>[5 min] ЗОДАНЕЕ</h2>
-  <p class="task">
-    Написать функцию log(something), которая принимает любую переменную, и выводит ее в консоль.
-
-    <pre>
-    <code>
-      const text = 'xuy4ek';
-      const chislo = 5;
-      const point1 = { x: 3, y: 8};
-      const point2 = { x: 2, y: 3};
-      log(text); // выводит xuy4ek в консоль 
-      log(chislo); // выводит 5 в консоль 
-      log(point1); // выводит { x: 3, y: 8} в консоль
-      log(point2); // выводит { x: 2, y: 3} в консоль
-    </code>
-    </pre>
-  </p>
-</template>
-
-<template id="lesson24-page12">
+<template id="lesson24-page21">
   <h2>[5 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать функцию distance(x, y), которая возвращает расстояние до центра координат.
@@ -2903,7 +2970,7 @@
   </p>
 </template>
 
-<template id="lesson24-page13">
+<template id="lesson24-page22">
   <h2>[10 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею, которая печатает на экран координаты и размер прямоульника { x, y, width, height }
@@ -2916,38 +2983,7 @@
   </p>
 </template>
 
-<template id="lesson24-page14">
-  <h2>ПЕРЕМЕНА</h2>
-  <figure>
-    <img src="img/peremena.jpeg" />
-  </figure>
-</template>
-
-<template id="lesson24-page15">
-  <h2>Игра: добавляем еще стены</h2>
-  <p>Добавляем еще 2 стены аналогично существующей.</p>
-</template>
-
-<template id="lesson24-page16">
-  <h2>ПЕРЕМЕНА</h2>
-  <figure>
-    <img src="img/peremena.jpeg" />
-  </figure>
-</template>
-
-<template id="lesson24-page17">
-  <h2>Соображаем как упростить код с помощью фукцей</h2>
-  <p>И объектов :)</p>
-</template>
-
-<template id="lesson24-page18">
-  <h2></h2>
-  <p>
-    КОНЕКЦ
-  </p>
-</template>
-
-<template id="lessonxx-pagexx">
+<template id="lesson24-page23">
   <h2>[15 min] ЗОДАНЕЕ</h2>
   <p class="task">
     Написать Фукцею isInsideRect(point, rect), которая возвращает true, если точка внутри прямоугольника, и false, если вне.
@@ -2979,7 +3015,7 @@
 </template>
 
 
-<template id="lessonxx-pagexx">
+<template id="lesson24-page24">
   <h2>RECT COLLISION FUNCTION</h2>
   <p class="task">
     Написать Фукцею rectsIntersect(rect1, rect2), которая возвращает true, если прямоугольники пересекаются, и false, если не.
@@ -3015,7 +3051,7 @@
   </p>
 </template>
 
-<template id="lessonxx-pagexx">
+<template id="lesson24-page25">
   <h2>Вносим в код нашу RECT COLLISION FUNCTION</h2>
   <p>
     <ol>
@@ -3026,7 +3062,7 @@
   </p>
 </template>
 
-<template id="lessonxx-pagexx">
+<template id="lesson24-page26">
   <h2>Добавляем еще 2 стены</h2>
   <p>
     <ol>
