Add more lesson26 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -3072,6 +3072,162 @@
   </p>
 </template>
 
+<!-- Lesson 26 -->
+
+<template id="lesson26-page0">
+  <h2>Димон, Ваня - МиШиГанцЫ</h2>
+  <figure>
+    <img src="certs/dimon-1.jpg" />
+  </figure>
+</template>
+
+<template id="lesson26-page1">
+  <h2>Димон - дЕмоН!</h2>
+  <figure>
+    <img src="certs/ivan.jpg" />
+  </figure>
+</template>
+
+<template id="lesson26-page2">
+  <h2>Димон - дЕмоН!</h2>
+  <figure>
+    <img src="certs/dimon-2.jpg" />
+  </figure>
+</template>
+
+<template id="lesson26-page3">
+  <div class="rules">
+    <h2>
+      НОВЕНЬКИМ: ПРАВЕЛА
+    </h2>
+
+    <p>
+      За каждый вопрос - банка.
+    </p>
+
+    <p>
+      За каждый ответ - банка.
+    </p>
+
+    <p>
+      Если вопросов нет - банка учителю.
+    </p>
+
+    <p>
+      Любое присуждение банки может быть оспорено общим голосованием.
+    </p>
+
+    <p>
+      В любой момент можно поднять голосование на штраф в 1 банку - по согласию всех учасников.
+    </p>
+
+    <p>
+      Право Вето: Ванчик, Димончик.
+    </p>
+
+    <p>
+      <b>Новенькие - первыми делают задания на уроке.</b>
+    </p>
+
+    <p>
+      <a href="rating.html">Rating page</a>
+    </p>
+  </div>
+
+</template>
+
+<template id="lesson26-page4">
+    <h2>
+      ЛИТУЧКА
+    </h2>
+    <figure>
+      <img src="img/lety4ka.gif" />
+    </figure>
+    <p>
+    </p>
+</template>
+
+<template id="lesson26-page5">
+  <h2>ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею, которая умножает число на 2.
+
+    <pre>
+    <code>
+      console.log(multiplyBy2(5)); // выводит 10
+      console.log(multiplyBy2(-3)); // выводит -6
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson26-page6">
+  <h2>[5 min] English</h2>
+  <figure>
+    <video controls>
+      <source src="/video/gamedev/create-project.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson26-page7">
+  <h2>ИГРА - СИНХРОНИЗАЦИЯ</h2>
+  <p>
+    <code>git log</code> в Терминале сравниваем с историей "commits" на сайте Github.com
+  </p>
+</template>
+
+<template id="lesson26-page8"]>
+  <h2>ИГРА - По 5 мин го</h2>
+</template>
+
+<template id="lesson26-page9">
+  <h2>[5 min ПЕРВОЕ]</h2>
+  <p>
+    Вспоминаем код
+  </p>
+</template>
+
+<template id="lesson26-page10">
+  <div class="rules">
+    <h2>
+      НОВЕНЬКИМ: ПРАВЕЛА
+    </h2>
+
+    <p>
+      За каждый вопрос - банка.
+    </p>
+
+    <p>
+      За каждый ответ - банка.
+    </p>
+
+    <p>
+      Если вопросов нет - банка учителю.
+    </p>
+
+    <p>
+      Любое присуждение банки может быть оспорено общим голосованием.
+    </p>
+
+    <p>
+      В любой момент можно поднять голосование на штраф в 1 банку - по согласию всех учасников.
+    </p>
+
+    <p>
+      Право Вето: Ванчик, Димончик.
+    </p>
+
+    <p>
+      <b>Новенькие - первыми делают задания на уроке.</b>
+    </p>
+
+    <p>
+      <a href="rating.html">Rating page</a>
+    </p>
+  </div>
+
+</template>
 <script>
   let currentTime = 0;
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
