Add first slides for lesson27

--- a/src/slides.html
+++ b/src/slides.html
@@ -2844,6 +2844,26 @@
   </figure>
 </template>
 
+<template id="lesson24-page17">
+  <h2>Пусто - жми дальше)</h2>
+</template>
+
+<template id="lesson24-page18">
+  <h2>[2 min] По реченню</h2>
+</template>
+
+<template id="lesson24-page19">
+  <h2>Соображаем как упростить код с помощью фукцей</h2>
+  <p>И объектов :)</p>
+</template>
+
+<template id="lesson24-page20">
+  <h2>FIN</h2>
+  <p>
+    КОНЕКЦ
+  </p>
+</template>
+
 
 <template id="lesson24-page21">
   <h2>[5 min] ЗОДАНЕЕ</h2>
@@ -3214,21 +3234,31 @@
   </p>
 </template>
 
-<template id="lesson24-page18">
-  <h2>[2 min] По реченню</h2>
+
+
+<template id="lesson27-page0">
+  <h2>УРОКЕ № 27</h2>
+  <p>Поехали ёпта</p>
 </template>
 
-<template id="lesson24-page19">
-  <h2>Соображаем как упростить код с помощью фукцей</h2>
-  <p>И объектов :)</p>
+<template id="lesson27-page1">
+  <h2>[5 min] ДИМОН, ВАНЯ - КРАСАВЫ! Advanced CSS</h2>
+  <p>Че там ? ) Покажите расскажите )</p>
 </template>
 
-<template id="lesson24-page20">
-  <h2>FIN</h2>
-  <p>
-    КОНЕКЦ
-  </p>
+<template id="lesson27-page2">
+  <h2>[5 min] English: Unity</h2>
+  <figure>
+    <video controls>
+      <source src="/video/gamedev/import-assets.mp4" type="video/mp4" />
+    </video>
+    <figcaption>
+      <a href="/video/gamedev/solarSystemAssets.zip">СКОНЧАТЬ ASSETS</a>
+    </figcaption>
+  </figure>
 </template>
+
+
 
 <script>
   let currentTime = 0;
