Add more lesson27 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -3242,11 +3242,28 @@
 </template>
 
 <template id="lesson27-page1">
-  <h2>[5 min] ДИМОН, ВАНЯ - КРАСАВЫ! Advanced CSS</h2>
-  <p>Че там ? ) Покажите расскажите )</p>
+  <h2>БАНКИ ЗА ДОМАШКУ</h2>
+  <figure>
+    <img src="krasav4eg.jpeg" />
+    <figcaption>
+      <a href="/">ДОСКАА ПОМËТА</a> | <a href="/src/rating.html">ССЫЛКЕ НА БАНККЕ</a>
+    </figcaption>
+  </figure>
 </template>
 
 <template id="lesson27-page2">
+  <h2>[5 min] ДИМОН, ВАНЯ - КРАСАВЫ! Advanced CSS</h2>
+  <figure>
+    <img src="michigan-unii.jpeg" />
+    <figcaption>
+      <a href="/">ДОСКАА ПОМËТА</a> | <a href="/src/rating.html">ССЫЛКЕ НА БАНККЕ</a>
+      <figcaption>
+        Че там ? ) Покажите расскажите )
+      </figcaption>
+  </figure>
+</template>
+
+<template id="lesson27-page3">
   <h2>[5 min] English: Unity</h2>
   <figure>
     <video controls>
@@ -3258,7 +3275,253 @@
   </figure>
 </template>
 
+<template id="lesson27-page4">
+  <h2>[2 min] По Реченню</h2>
+  <p>
+    Englesh
+  </p>
+</template>
 
+<template id="lesson27-page4">
+    <h2>
+      ЛИТУЧКА
+    </h2>
+    <figure>
+      <img src="img/lety4ka.gif" />
+    </figure>
+</template>
+
+<template id="lesson27-page6">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею sum, которая принимает 2 числа, и возвращает их сумму 
+
+    <pre>
+    <code>
+      console.log(sum(5, 7)); // выводит 12
+
+      console.log(sum(-3, -2)); // выводит -5
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson27-page7">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею subtract, которая принимает 2 числа, и возвращает их РАЗНИИЦУ
+
+    <pre>
+    <code>
+      console.log(subtract(5, 7)); // выводит -2
+
+      console.log(sumsubtract(-3, -2)); // выводит -1
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson27-page8">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею pointSum, которая принимает Обьект { x, y }, и возвращает сумму координат: x + y.
+
+    <pre>
+    <code>
+      console.log(pointSum({ x: 5, y: 7})); // выводит 12
+
+      console.log(pointSum({ x: -3, y: -2})); // выводит -5
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson27-page8">
+  <h2>ПЕРЕМЕНА</h2>
+  <figure>
+    <img src="img/peremena.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson27-page10">
+  <h2>[5 min] English</h2>
+  <figure>
+    <video controls>
+      <source src="/video/carol-choir.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+<template id="lesson27-page11">
+  <h2>[2 nin] По Реченню</h2>
+  <p>
+    Englesh
+  </p>
+</template>
+
+<template id="lesson27-page12">
+  <h2>[5 min] Игра: синхронезацеяя GIT</h2>
+  <p>
+    Всем: git pull
+  </p>
+  <p>
+    Тимуру: git clone
+  </p>
+</template>
+
+<template id="lesson27-page13">
+  <h2>[5 min] Игра: рефаторим все функции для Enemy</h2>
+  <p>
+    Не должно быть функций которые работают только с enemy2 напр.
+  </p>
+  <p>
+    Все функции должны принимать enemy, и работать с любым enemy, а не с кокретноо enemy2 или enemy3.
+    <ol>
+      <li>renderEnemy</li>
+      <li>moveEnemy</li>
+      <li>checkShipEnemyCollision</li>
+      <li>checkRocketEnemyCollision</li>
+    </ol>
+  </p>
+</template>
+
+<template id="lesson27-page14">
+  <h2>ПЕРЕМЕНА</h2>
+  <figure>
+    <img src="img/peremena.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson27-page15">
+  <h2>[5 min] English</h2>
+  <figure>
+    <video controls>
+      <source src="/tatu.mp4" type="video/mp4" />
+    </video>
+  </figure>
+</template>
+
+
+<template id="lesson27-page16">
+  <h2>[2 nin] По Реченню</h2>
+  <p>
+    Englesh
+  </p>
+</template>
+
+<template id="lesson27-page17">
+  <h2>[5 min] Magic Numbers</h2>
+  <figure>
+    <img src="magic-numbers.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson27-page18">
+  <h2>Magic Numbers</h2>
+  <figure>
+    <img src="magic-num-stackoverflow.png" />
+  </figure>
+</template>
+
+<template id="lesson27-page19">
+  <h2>[5 min] Игра: Создаем константы для размеров врагов</h2>
+  <p>
+    <pre><code>
+    const enemy1Width = 100;
+    const enemy1Height = 300;
+
+    const enemy2Width = 50;
+    const enemy2Height = 20; 
+    </code></pre>
+  </p>
+</template>
+
+<template id="lesson27-page20">
+  <h2>[5 min] Вспоменаем обиекти</h2>
+  <p>
+    <pre><code>
+    const enemy1 = {
+      x: 5,
+      y: 8,
+      width: 300,
+      o4ko: 'zalupa',
+    };
+
+    console.log('enemy1: ', enemy1);
+    console.log('enemy1.x: ', enemy1.x);
+    console.log('enemy1.y: ', enemy1.y);
+    console.log('enemy1.width: ', enemy1.width);
+    console.log('enemy1.o4ko: ', enemy1.o4ko);
+    </code></pre>
+    
+  </p>
+</template>
+
+
+<template id="lesson27-page21">
+  <h2>ПЕРЕМЕНА</h2>
+  <figure>
+    <img src="img/peremena.jpeg" />
+  </figure>
+</template>
+
+<template id="lesson27-page22">
+  <h2>[5 min] Для каждого врага создаем обиект</h2>
+  <p>
+    <pre><code>
+    const enemy1 = {
+      element: document.querySelector('#enemy1'),
+      x: 5,
+      y: 8,
+      width: 300,
+      o4ko: 'zalupa',
+    };
+    </code></pre>
+  </p>
+</template>
+
+<template id="lesson27-page23">
+  <h2>[5 min] Фукцеи должны работать с обиектоми</h2>
+  <p>
+    <pre><code>
+    function moveEnemy(enemy) {
+      enemy.x += enemy.velocity;
+    }
+    function renderEnemy(enemy) {
+      enemy.element.style.left = enemy.x;
+    }
+    </code></pre>
+  </p>
+</template>
+
+<template id="lesson27-page24">
+  <h2>[5 min] Фукцеи должны работать с обиектоми</h2>
+  <p>
+    <pre><code>
+    function checkShipEnemyCollision(enemy) {
+      if (
+        ship.x + ship.width &gt; enemy.x &amp;
+        ship.x &lt; enemy.x + enemy.width &amp;
+        ship.y + ship.height &gt; enemy.y &amp;
+        ship.y &lt; enemy.y + enemy.height
+      )
+    }
+
+    function checkRocketCollision(enemy) {
+      if (
+        rock.x + ship.width &gt; enemy.x &amp;
+        rock.x &lt; enemy.x + enemy.width &amp;
+        rock.y + ship.height &gt; enemy.y &amp;
+        rock.y &lt; enemy.y + enemy.height
+      )
+    }
+    </code></pre>
+  </p>
+</template>
+
+<template id="lesson27-page25">
+  <h2>FIN</h2>
+</template>
 
 <script>
   let currentTime = 0;
