Correct lesson27 slides

--- a/src/slides.html
+++ b/src/slides.html
@@ -3244,9 +3244,9 @@
 <template id="lesson27-page1">
   <h2>БАНКИ ЗА ДОМАШКУ</h2>
   <figure>
-    <img src="krasav4eg.jpeg" />
+    <img src="img/krasav4eg.jpeg" />
     <figcaption>
-      <a href="/">ДОСКАА ПОМËТА</a> | <a href="/src/rating.html">ССЫЛКЕ НА БАНККЕ</a>
+      <a href="/" target="_blank">ДОСКАА ПОМËТА</a> | <a href="/src/rating.html" target="_blank">ССЫЛКЕ НА БАНККЕ</a>
     </figcaption>
   </figure>
 </template>
@@ -3254,12 +3254,10 @@
 <template id="lesson27-page2">
   <h2>[5 min] ДИМОН, ВАНЯ - КРАСАВЫ! Advanced CSS</h2>
   <figure>
-    <img src="michigan-unii.jpeg" />
+    <img src="img/michigan-uni.jpeg" />
     <figcaption>
-      <a href="/">ДОСКАА ПОМËТА</a> | <a href="/src/rating.html">ССЫЛКЕ НА БАНККЕ</a>
-      <figcaption>
-        Че там ? ) Покажите расскажите )
-      </figcaption>
+      Че там ? ) Покажите расскажите )
+    </figcaption>
   </figure>
 </template>
 
@@ -3282,7 +3280,7 @@
   </p>
 </template>
 
-<template id="lesson27-page4">
+<template id="lesson27-page5">
     <h2>
       ЛИТУЧКА
     </h2>
@@ -3336,7 +3334,7 @@
   </p>
 </template>
 
-<template id="lesson27-page8">
+<template id="lesson27-page9">
   <h2>ПЕРЕМЕНА</h2>
   <figure>
     <img src="img/peremena.jpeg" />
@@ -3396,7 +3394,7 @@
   <h2>[5 min] English</h2>
   <figure>
     <video controls>
-      <source src="/tatu.mp4" type="video/mp4" />
+      <source src="/video/tatu.mp4" type="video/mp4" />
     </video>
   </figure>
 </template>
@@ -3412,14 +3410,14 @@
 <template id="lesson27-page17">
   <h2>[5 min] Magic Numbers</h2>
   <figure>
-    <img src="magic-numbers.jpeg" />
+    <img src="img/magic-numbers.jpeg" />
   </figure>
 </template>
 
 <template id="lesson27-page18">
   <h2>Magic Numbers</h2>
   <figure>
-    <img src="magic-num-stackoverflow.png" />
+    <img src="img/magic-num-stackoverflow.png" />
   </figure>
 </template>
 
@@ -3481,12 +3479,32 @@
 </template>
 
 <template id="lesson27-page23">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею <code>printEnemy</code>, которая принимает врага и печатает о нем инфу
+    <pre>
+    <code>
+      console.log(printEnemy(enemy1));
+
+      // печатает
+      // x: 153
+      // y: 80
+      // width: 300
+      // o4ko: zalupa
+
+    </code>
+    </pre>
+  </p>
+</template>
+
+<template id="lesson27-page24">
   <h2>[5 min] Фукцеи должны работать с обиектоми</h2>
   <p>
     <pre><code>
     function moveEnemy(enemy) {
       enemy.x += enemy.velocity;
     }
+
     function renderEnemy(enemy) {
       enemy.element.style.left = enemy.x;
     }
@@ -3494,8 +3512,8 @@
   </p>
 </template>
 
-<template id="lesson27-page24">
-  <h2>[5 min] Фукцеи должны работать с обиектоми</h2>
+<template id="lesson27-page25">
+  <h2>[10 min] Фукцеи должны работать с обиектоми</h2>
   <p>
     <pre><code>
     function checkShipEnemyCollision(enemy) {
@@ -3519,7 +3537,7 @@
   </p>
 </template>
 
-<template id="lesson27-page25">
+<template id="lesson27-page26">
   <h2>FIN</h2>
 </template>
 
