Add tim to rating page

--- a/src/rating.html
+++ b/src/rating.html
@@ -32,13 +32,13 @@
   }
   
   .participant img {
-    height: 130px;
-    width: 130px;
+    height: 80px;
+    width: 80px;
   }
 
   .participant svg {
-    width: 130px;
-    height: 130px;
+    width: 80px;
+    height: 80px;
     fill: white;
     stroke-width: 7px;
     stroke: green;
@@ -68,6 +68,9 @@
     </div>
     <div class="participant">
       <img src="/img/valik_h.jpg" />
+    </div>
+    <div class="participant">
+      <img src="/img/mazerTim.jpg" />
     </div>
 </body>
 
