Add van4ik and den4ik to rating

--- a/src/rating.html
+++ b/src/rating.html
@@ -55,6 +55,9 @@
 
 <body>
     <div class="participant">
+      <img src="/img/napaleon.webp" />
+    </div>
+    <div class="participant">
       <img src="/img/johnny.jpg" />
     </div>
     <div class="participant">
@@ -71,6 +74,9 @@
     </div>
     <div class="participant">
       <img src="/img/mazerTim.jpg" />
+    </div>
+    <div class="participant">
+      <img src="/img/den4ik.jpg" />
     </div>
 </body>
 
