Create SlidesV2 and Lesson28

--- a/src/slides.html
+++ b/src/slides.html
@@ -3541,6 +3541,106 @@
   <h2>FIN</h2>
 </template>
 
+<template id="lesson28-page0">
+  <h2>Уроке №28</h2>
+  <p>Go go go, let's move out!</p>
+</template>
+
+<template id="lesson28-page1">
+    <h2>
+      ЛИТУЧКА
+    </h2>
+    <figure>
+      <img src="img/lety4ka.gif" />
+    </figure>
+</template>
+
+<template id="lesson28-page2">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    <ol>
+      <li>Create two variables: x and y, and assign any numbers to them.</li>
+      <li>Print text "x:" on the screen</li>
+      <li>Print the value of variable x on the screen</li>
+      <li>Print "<br />" on the screen</li>
+      <li>Print text "y:" on the screen</li>
+      <li>Print the value of variable y on the screen</li>
+    </ol>
+  </p>
+</template>
+
+<template id="lesson28-page3">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    <ol>
+      <li>Create object named "point", which has two properties: x and y. Assign any numbers to point.x and point.y</li>
+      <li>Print text "point.x" on the screen</li>
+      <li>Print the value of point.x on the screen</li>
+      <li>Print "<br />" on the screen</li>
+      <li>Print text "point.y:" on the screen</li>
+      <li>Print the value of point.y on the screen</li>
+    </ol>
+  </p>
+</template>
+
+<template id="lesson28-page4">
+  <h2>[5 min] ОНАЛЕЗ</h2>
+  <p>
+    Сравниваем коды.
+  </p>
+  <p>
+    В чем разница?
+  </p>
+</template>
+
+<template id="lesson28-page5">
+  <h2>[5 min] Добавляем z</h2>
+  <p>
+    Добавляем в первое зоданее третью переменную z.
+  </p>
+  <p>
+    Во второе задание добавляем point.z.
+  </p>
+</template>
+
+<template id="lesson28-page6">
+  <h2>[5 min] Добавляем вращение rotation по осям x, y, z</h2>
+  <p>
+    Добавляем в первое зоданее еще 3 переменные rotationX, rotationY, rotationZ.
+  </p>
+  <p>
+    Во второе задание добавляем point.rotation.x, point.rotation.y, point.rotation.z.
+  </p>
+</template>
+
+<template id="lesson28-page7">
+  <h2>[5 min] Добавляем вторую точку</h2>
+  <p>
+    Добавляем в первое зоданее еще 6 переенных для второй точки.
+  </p>
+  <p>
+    Во второе задание добавляем обьект point2, с координатами и поворот.
+  </p>
+</template>
+
+<template id="lesson27-page7">
+</template>
+
+<template id="lesson27-page8">
+  <h2>[5 min] ЗОДАНЕЕ</h2>
+  <p class="task">
+    Написать Фукцею pointSum, которая принимает Обьект { x, y }, и возвращает сумму координат: x + y.
+
+    <pre>
+    <code>
+      console.log(pointSum({ x: 5, y: 7})); // выводит 12
+
+      console.log(pointSum({ x: -3, y: -2})); // выводит -5
+    </code>
+    </pre>
+  </p>
+</template>
+
 <script>
   let currentTime = 0;
   const lesson = location.hash.replace('#', '').replace(/-.*$/, '');
