Add aim lines to gepard

--- a/gepard/index.html
+++ b/gepard/index.html
@@ -7,6 +7,10 @@
     <div id="graph">
       <div id="xuy4ek"></div>
       <div id="bullet">b</div>
+      <div id="line-x-300"></div>
+      <div id="line-x-300-text">x=400</div>
+      <div id="line-y-400"></div>
+      <div id="line-y-400-text">y=300</div>
     </div>
   </body>
 
