--- a/gepard/index.html
+++ b/gepard/index.html
@@ -4,14 +4,12 @@
   </head>
 
   <body>
-    <div id="graph">
-      <div id="xuy4ek"></div>
-      <div id="bullet">b</div>
-      <div id="line-x-300"></div>
-      <div id="line-x-300-text">x=400</div>
-      <div id="line-y-400"></div>
-      <div id="line-y-400-text">y=300</div>
-    </div>
+    <div id="xuy4ek"></div>
+    <div id="bullet"></div>
+    <div id="line-x-300"></div>
+    <div id="line-x-300-text">x = 400</div>
+    <div id="line-y-400"></div>
+    <div id="line-y-400-text">y = 300</div>
   </body>
 
   <script src="app.js"></script>
