gepard: add shahed! :)

--- a/gepard/index.html
+++ b/gepard/index.html
@@ -4,12 +4,14 @@
   </head>
 
   <body>
-    <div id="xuy4ek"></div>
     <div id="bullet"></div>
     <div id="line-x-300"></div>
-    <div id="line-x-300-text">x = 400</div>
+    <div id="line-x-300-text">x = 300</div>
+    <div id="line-x-400"></div>
+    <div id="line-x-400-text">x = 400</div>
     <div id="line-y-400"></div>
-    <div id="line-y-400-text">y = 300</div>
+    <div id="line-y-400-text">y = 400</div>
+    <img id="shahed" src="shahed.png" />
   </body>
 
   <script src="app.js"></script>
