gepard: add bullet circle :)

--- a/gepard/index.html
+++ b/gepard/index.html
@@ -11,7 +11,13 @@
     <div id="line-x-400-text">x = 400</div>
     <div id="line-y-400"></div>
     <div id="line-y-400-text">y = 400</div>
+
+
     <img id="shahed" src="shahed.png" />
+
+    <svg>
+      <circle id="circle" x="0" y="0" r="0">
+    </svg>
   </body>
 
   <script src="app.js"></script>
