--- a/gepard/index.html
+++ b/gepard/index.html
@@ -12,7 +12,7 @@
     <div id="line-y-400"></div>
     <div id="line-y-400-text">y = 400</div>
 
-
+    <img id="drone2" src="drone2.png" />
     <img id="shahed" src="shahed.png" />
 
     <svg>
