--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
 </body>
 
-<script src="index.js" type="module"></script>
+<script src="index.js?v=1.0" type="module"></script>
 
 <script src="lib/prism.js"></script>
 
