Add "add to home screen" button

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link href="lib/prism.css" rel="stylesheet" />
   <link rel="stylesheet" href="src/index.css" />
+  <link rel="icon" type="image/png" href="/img/logo/logo-64.png"/>
+  <link rel="manifest" href="manifest.webmanifest" />
 </head>
 
 <body>
@@ -14,6 +16,18 @@
 <script src="index.js?v=1.0" type="module"></script>
 
 <script src="lib/prism.js"></script>
+
+<script type="text/javascript">
+ if ('serviceWorker' in navigator) {
+    console.log("Will the service worker register?");
+    navigator.serviceWorker.register('service-worker.js')
+      .then(function(reg){
+        console.log("Yes, it did.");
+     }).catch(function(err) {
+        console.log("No it didn't. This happened:", err)
+    });
+ }
+</script>
 
 <!-- Babylon.js -->
 <!--
