--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
   <link rel="stylesheet" href="src/index.css" />
   <link rel="icon" type="image/png" href="/img/logo/logo-64.png"/>
   <link rel="manifest" href="manifest.webmanifest" />
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="/img/logo/logo-64.png">
+  <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
