--- a/index.html
+++ b/index.html
@@ -7,48 +7,15 @@
   <link href="lib/prism.css" rel="stylesheet" />
   <link rel="stylesheet" href="src/index.css" />
   <link rel="icon" type="image/png" href="/img/logo/logo-64.png"/>
-  <link rel="manifest" href="manifest.webmanifest" />
-  <meta name="msapplication-TileColor" content="#ffffff">
-  <meta name="msapplication-TileImage" content="/img/logo/logo-64.png">
   <meta name="theme-color" content="#ffffff">
 </head>
 
 <body>
 </body>
 
-<script src="index.js?v=1.0" type="module"></script>
+<script src="index.js" type="module"></script>
 
 <script src="lib/prism.js"></script>
-
-<script type="text/javascript">
- if ('serviceWorker' in navigator) {
-    console.log("Will the service worker register?");
-    navigator.serviceWorker.register('service-worker.js')
-      .then(function(reg){
-        console.log("Yes, it did.");
-     }).catch(function(err) {
-        console.log("No it didn't. This happened:", err)
-    });
- }
-</script>
-
-<!-- Babylon.js -->
-<!--
-<script src="/lib/dat.gui.min.js"></script>
-<script src="/lib/Assets.js"></script>
-<script src="/lib/ammo.js"></script>
-<script src="/lib/cannon.js"></script>
-<script src="/lib/Oimo.js"></script>
-<script src="/lib/earcut.min.js"></script>
-<script src="/lib/babylon.js"></script>
-<script src="/lib/babylonjs.materials.min.js"></script>
-<script src="/lib/babylonjs.proceduralTextures.min.js"></script>
-<script src="/lib/babylonjs.postProcess.min.js"></script>
-<script src="/lib/babylonjs.loaders.js"></script>
-<script src="/lib/babylonjs.serializers.min.js"></script>
-<script src="/lib/babylon.gui.min.js"></script>
-<script src="/lib/babylon.inspector.bundle.js"></script>
--->
 
 </html>
 
