Update rating page participants

--- a/src/rating.html
+++ b/src/rating.html
@@ -61,22 +61,13 @@
       <img src="/img/johnny.jpg" />
     </div>
     <div class="participant">
-      <img src="/img/tony.jpg" />
-    </div>
-    <div class="participant">
       <img src="/img/dimon.jpg" />
     </div>
     <div class="participant">
-      <img src="/img/hellgamer.jpg" />
+      <img src="/img/TinaDenysiuk.jpg" />
     </div>
     <div class="participant">
-      <img src="/img/valik_h.jpg" />
-    </div>
-    <div class="participant">
-      <img src="/img/mazerTim.jpg" />
-    </div>
-    <div class="participant">
-      <img src="/img/den4ik.jpg" />
+      <img src="/img/mister-smith.jpg" />
     </div>
 </body>
 
